# telegram-scraper-server

./: .dockerignore  .env.example  .gitignore  CHANGES_ATOMIC_COMMITS.md  Dockerfile  GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  SERVER_README.md  TELEGRAM_SCRAPER_SKILL.md  config.example.yaml  pyproject.toml  settings.example.yaml  test_auth.py
examples/: usage_example.py
src/telegram_scraper/: __init__.py  authenticate.py  client.py  config.py  db_helper.py  media_downloader.py  models.py  scraper.py  server.py
src/telegram_scraper/api/: __init__.py  auth.py  auth_utils.py  channels.py  deps.py  dialogs.py  files.py  history.py  search.py  settings.py
src/telegram_scraper/database/: __init__.py  models.py  operations.py  paths.py  session.py
src/telegram_scraper_cli/: __init__.py  auth.py  authenticate.py  cli.py  cli_auth.py  cli_search.py  config.py  db_helper.py  dump.py  export.py  media_downloader.py  runner.py  scrape.py  scraper.py  search.py  server.py  streaming_scraper.py  tgsc.py
src/telegram_scraper_cli/api/: __init__.py  auth.py  channels.py  files.py  history.py
tests/: conftest.py  mock_telegram.py  test_auth.py  test_dialogs.py  test_files.py  test_history.py  test_settings.py  test_sync.py
